thêm giao diện tạo mới khách + lượt khám

--- a/src/main/resources/templates/customer/add-customer/index.html
+++ b/src/main/resources/templates/customer/add-customer/index.html
@@ -1,10 +1,227 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
+<!--
+Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 4 & Angular 8
+Author: KeenThemes
+Website: http://www.keenthemes.com/
+Contact: support@keenthemes.com
+Follow: www.twitter.com/keenthemes
+Dribbble: www.dribbble.com/keenthemes
+Like: www.facebook.com/keenthemes
+Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
+-->
+<html lang="en">
+
+<!-- begin::Head -->
+
+<head>
+    <base href="../../">
+    <meta charset="utf-8"/>
+    <title>Thêm bệnh nhân mới</title>
+    <meta name="description" content="Quản lý bệnh nhân">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!--begin::Fonts -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700">
+
+    <!--end::Fonts -->
+
+    <!--begin::Page Vendors Styles(used by this page) -->
+    <link href="assets/plugins/custom/fullcalendar/fullcalendar.bundle.css" rel="stylesheet" type="text/css"/>
+
+    <!--end::Page Vendors Styles -->
+
+    <!--begin::Global Theme Styles(used by all pages) -->
+    <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
+
+    <!--end::Global Theme Styles -->
+
+    <!--begin::Layout Skins(used by all pages) -->
+    <link href="assets/css/skins/header/base/light.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/skins/header/menu/light.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/skins/brand/dark.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/skins/aside/dark.css" rel="stylesheet" type="text/css"/>
+    <!--end::Layout Skins -->
+    <link rel="shortcut icon" href="assets/media/logos/favicon.ico"/>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <style>
+        .vertical-center {
+            margin-left: 25%;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .twitter-typeahead {
+            display: block !important;
+        }
+    </style>
+</head>
+
+<!-- end::Head -->
+
+<!-- begin::Body -->
+<body class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header-mobile--fixed kt-subheader--enabled kt-subheader--fixed kt-subheader--solid kt-aside--enabled kt-aside--fixed kt-page--loading">
+
+<!-- begin:: Page -->
+
+<!-- begin:: Header Mobile -->
+<div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
+    <div class="kt-header-mobile__logo">
+        <a href="index.html">
+            <img alt="Logo" src="assets/media/logos/logo-light.png"/>
+        </a>
+    </div>
+    <div class="kt-header-mobile__toolbar">
+        <button class="kt-header-mobile__toggler kt-header-mobile__toggler--left" id="kt_aside_mobile_toggler">
+            <span></span></button>
+    </div>
+</div>
+
+<!-- end:: Header Mobile -->
+<!-- begin:: Page -->
+
+<div class="kt-grid kt-grid--hor kt-grid--root">
+    <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--ver kt-page">
+
+        <!-- begin:: Aside -->
+
+        <div data-th-replace="partials/_aside/base"></div>
+
+        <div class="kt-header-mobile--fixed kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor kt-wrapper"
+             id="kt_wrapper">
+            <div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor"
+                 id="kt_content">
+                <!-- begin:: Content -->
+                <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid ">
+                    <!--begin::Portlet-->
+                    <div class="kt-portlet">
+                        <div class="kt-portlet__head">
+                            <div class="kt-portlet__head-label">
+                                <h3 class="kt-portlet__head-title" id="head-title">
+                                    Thêm bệnh nhân mới
+                                </h3>
+                            </div>
+
+                        </div>
+                        <div class="kt-portlet__body ">
+                            <div class="kt-section ">
+                                <div class="kt-section__content">
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <label>Tên bệnh nhân<span style="color: red">*</span></label>
+                                            <input type="text" class="form-control material-input"
+                                                   placeholder="Họ và tên bệnh nhân"
+                                                   id="cusName">
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <label>Tên gợi nhớ<span style="color: red">*</span></label>
+                                            <i class="flaticon2-information" data-toggle="kt-tooltip" data-placement="right" title="Tên gợi nhớ giúp phân biệt các khách hàng cùng tên"></i>
+                                            <input type="text" class="form-control material-input"
+                                                   id="cusNick">
+
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <label>Số điện thoại</label>
+                                            <input type="text" class="form-control material-input"
+                                                   id="cusPhone">
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <label>Địa chỉ</label>
+                                            <input type="text" class="form-control material-input"
+                                                   id="cusAddr">
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-6">
+                                            <label>Số điện thoại</label>
+                                            <input type="text" class="form-control material-input"
+                                                   id="cusBilling">
+                                        </div>
+                                        <div class="col-lg-6">
+                                            <label>Số tiền</label>
+                                            <input type="number" class="form-control material-input"
+                                                   id="cusMoney">
+                                        </div>
+                                    </div>
+                                    <div class="row col-lg-12">
+                                        <label>Ghi chú</label>
+                                        <textarea class="form-control" rows="3" id="cusNote"></textarea>
+                                    </div>
+                                    <br>
+                                    <div class="row" style="justify-content: center">
+                                        <button class="btn btn-brand">Quay lại</button>
+                                        <button class="btn btn-success" style="margin-left: 0.5em;">Thêm mới</button>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<th:block th:replace="customer/add-customer/index_func.html"></th:block>
+
+<!-- end:: Page -->
+
+<!-- begin::Global Config(global config for global JS sciprts) -->
+<script>
+    var KTAppOptions = {
+        "colors": {
+            "state": {
+                "brand": "#5d78ff",
+                "dark": "#282a3c",
+                "light": "#ffffff",
+                "primary": "#5867dd",
+                "success": "#34bfa3",
+                "info": "#36a3f7",
+                "warning": "#ffb822",
+                "danger": "#fd3995"
+            },
+            "base": {
+                "label": [
+                    "#c5cbe3",
+                    "#a1a8c3",
+                    "#3d4465",
+                    "#3e4466"
+                ],
+                "shape": [
+                    "#f0f3ff",
+                    "#d9dffa",
+                    "#afb4d4",
+                    "#646c9a"
+                ]
+            }
+        }
+    };
+</script>
+
+<!-- end::Global Config -->
+
+<!--begin::Global Theme Bundle(used by all pages) -->
+<script src="assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
+<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
+
+<!--end::Global Theme Bundle -->
+
+<!--begin::Page Vendors(used by this page) -->
+
+
+<script src="assets/js/common.js" type="text/javascript"></script>
+<!--end::Page Scripts -->
 </body>
+
+<!-- end::Body -->
+
 </html>
