--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -205,9 +205,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
                                                     class="text-center" rowspan="2">
                                                     <button type="button" class="btn btn-success btn-circle btn-icon"
-                                                            data-toggle="modal"
-                                                            data-target="#kt_select2_modal" data-backdrop="static"
-                                                            data-keyboard="false">
+                                                            id="btnAddTran">
                                                         <i class="flaticon2-plus"></i>
                                                     </button>
                                                 </th>
@@ -277,73 +275,6 @@ License: You must have a valid license purchased only from themeforest(the above
                 <!-- end:: Content -->
             </div>
             <!-- Modal -->
-            <div class="modal fade" id="kt_select2_modal" tabindex="-1" role="dialog"
-                 aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLongTitle">Thêm mới giao dịch</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <label>Tên bệnh nhân</label>
-                                    <div class="typeahead">
-                                        <input type="text" class="form-control" dir="ltr"
-                                               placeholder="Nhập họ và tên bệnh nhân" id="cusName">
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <label>Chẩn đoán</label>
-                                    <input type="text" class="form-control material-input" placeholder="Chẩn đoán"
-                                           id="diagnostic">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-8">
-                                    <label>Thủ thuật</label>
-                                    <select class="form-control kt-select2" id="kt_select2_3_modal" name="param"
-                                            multiple="multiple">
-                                    </select>
-                                </div>
-                                <div class="col-lg-4">
-                                    <label>Thuốc</label>
-                                    <input type="text" class="form-control material-input" id="medicine">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <label>Tiền Thủ thuật</label>
-                                    <input type="number" class="form-control material-input" id="moneyPro">
-                                </div>
-                                <div class="col-lg-4">
-                                    <label>Tiền Thuốc</label>
-                                    <input type="number" class="form-control material-input" id="moneyMec">
-                                </div>
-                                <div class="col-lg-4">
-                                    <label>Thanh toán</label>
-                                    <input type="text" class="form-control material-input" id="pay">
-                                </div>
-                            </div>
-                            <div class="row col-lg-12">
-                                <label>Ghi chú</label>
-                                <textarea class="form-control" rows="3" id="note1"></textarea>
-                            </div>
-                            <input type="checkbox" id="cb_tran" name="cb_tran" value="0">
-                            <label for="cb_tran">Thêm nhiều dữ liệu</label><br>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                                    onclick="window.location = '/tran-a-day'">Đóng
-                            </button>
-                            <button type="button" class="btn btn-primary" id="saveTran">Lưu thông tin</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <!--begin::Modal spend-->
             <div class="modal fade" id="kt_modal_3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                  aria-hidden="true">
